[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/HyperspaceBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/Main_Menu.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sounds/button.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Sprites/pixelspace_large.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="Main_Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.282353 )
position = Vector2( 1442, 901 )
texture = ExtResource( 4 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
color = Color( 0, 0, 0, 0.25098 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -1.0
margin_right = 2.0
margin_bottom = -201.0
custom_fonts/font = SubResource( 1 )
text = "Welcome to the Arcade Space Shooter!"
align = 1
valign = 1

[node name="Play" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -20.0
margin_right = 100.0
margin_bottom = 20.0
rect_clip_content = true
custom_fonts/font = SubResource( 2 )
text = "Play"

[node name="Quit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = 50.0
margin_right = 100.0
margin_bottom = 90.0
rect_clip_content = true
custom_fonts/font = SubResource( 2 )
text = "Quit"

[node name="Button_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 1.0

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
